--- a/Exercise Sets/Exercise Set 2/style.css
+++ b/Exercise Sets/Exercise Set 2/style.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    flex-wrap: wrap;
 }
 
 .inner-container {
@@ -11,7 +12,7 @@
     padding: 10px;
     margin: 15px;
     width: 300px;
-    height: auto;
+    height: 150px;
 }
 
 body {
