--- a/Laboratory Activities/Laboratory Activity 2 - 03-10-2024/styles.css
+++ b/Laboratory Activities/Laboratory Activity 2 - 03-10-2024/styles.css
@@ -4,7 +4,7 @@ h1{
     font-size: 4em;
     color: #ffffff;
     margin: 0;
-    padding: 0;
+    padding-top: 16px;
     text-shadow: 0px 0px 8px #00000040;;
 }
 
@@ -16,41 +16,45 @@ body{
 }
 
 .outer-container{
-    height: 600px;
+    height: auto;
     width: auto;
-    border: 1px solid #a7a9ad;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 2px;
+    gap: 18px;
+    padding-top: 25px;
 }
 
 .vision-container{
-    height: 46%;
-    width: 85%;
-    background-color: #ffffff45;
+    height: auto;
+    width: 80%;
+    background-color: #ffffff30;
     border: 1px solid #a7a9ad51;
-    box-shadow: 0px 0px 10px #00000040;
-    border-radius: 15px;
+    box-shadow: 0px 0px 10px #00000070;
+    border-radius: 30px;
+    padding: 1.5% 0 1.5% 0;
 
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .item{
-    height: 70%;
-    width: 15%;
+    height: 200px;
+    width: 200px;
+    box-sizing: border-box;
     background-color: #838282bd;
     border: 1px solid #a7a9ad51;
     /* box-shadow: 0px 0px 10px #00000040; */
     border-radius: 15px;
+    padding: 1% 0 1% 0;
 }
 
 #long-item{
-    height: 70%;
-    width: 50%;
+    height: 200px;
+    width: 650px;
     background-color: #838282bd;
     border: 1px solid #a7a9ad51;
     /* box-shadow: 0px 0px 10px #00000040; */
