--- a/Laboratory Activities/Laboratory Activity 2 - 03-10-2024/styles.css
+++ b/Laboratory Activities/Laboratory Activity 2 - 03-10-2024/styles.css
@@ -5,7 +5,7 @@ h1{
     color: #ffffff;
     margin: 0;
     padding-top: 16px;
-    text-shadow: 0px 0px 8px #00000040;;
+    text-shadow: 0px 0px 8px #00000040;
 }
 
 body{
@@ -26,7 +26,22 @@ body{
     padding-top: 25px;
 }
 
-.vision-container{
+.top-vision-container{
+    height: auto;
+    width: 80%;
+    background-color: #ffffff30;
+    border: 1px solid #a7a9ad51;
+    box-shadow: 0px 0px 10px #00000070;
+    border-radius: 30px;
+    padding: 1.5% 0 1.5% 0;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.bottom-vision-container{
     height: auto;
     width: 80%;
     background-color: #ffffff30;
@@ -45,18 +60,37 @@ body{
     height: 200px;
     width: 200px;
     box-sizing: border-box;
-    background-color: #838282bd;
+    background-color: #838282;
     border: 1px solid #a7a9ad51;
-    /* box-shadow: 0px 0px 10px #00000040; */
+    box-shadow: 0px 0px 10px #00000040;
     border-radius: 15px;
-    padding: 1% 0 1% 0;
+}
+
+.item>img {
+    width: 100%;
+    height: 100%;
+    object-fit:fill;
+    border-radius: 15px;
 }
 
 #long-item{
-    height: 200px;
+    height: 232px;
     width: 650px;
-    background-color: #838282bd;
-    border: 1px solid #a7a9ad51;
-    /* box-shadow: 0px 0px 10px #00000040; */
     border-radius: 15px;
+    display: flex;
+}
+
+#front-watermark{
+    font-size: 12em;
+    font-family: "Arizonia", cursive;
+    font-weight: 400;
+    font-style: normal;
+    color: #12ebffa1;
+    text-shadow: 0px 0px 5px #00000099;
+
+    position: absolute;
+    top: 55%;
+    transform: translateY(-50%);
+    margin: 0;
+    pointer-events: none;
 }
